--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <body>
         <div id="intro" class="pagefill">
             <h1 class="darkBG">Matthew Sundberg</h1>
+            <ul class="inlineUl">
+                <li><a href="https://www.twitter.com/thematthberg"><img src="" alt="Twitter"/></a></li>
+                <li><a href="https://www.flickr.com/photos/matthberg"><img src="" alt="Flickr"/></a></li>
+                <li><a href="https://www.github.com/matthberg"><img src="" alt="Github"/></a></li>
+            </ul>
         </div>
+        <!-- Scripts, Analytics, and fun like that.-->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga')
+          ga('create', 'UA-61921537-1', 'auto');
+          ga('send', 'pageview');
+        </script>
     </body>
 </html>
