Updated wind.html to trigger refresh?

--- a/wind.html
+++ b/wind.html
@@ -10,7 +10,7 @@
     <script src="wind.js"></script>
   </head>
   <body>
-    <div class="instructions">Click for new path and tone analysis. Right Click for source map toggle.<div>
+    <div class="instructions">Click for new path and tone analysis. <br/>Right Click for source map toggle.<div>
     <!-- Made 2019-03-04 for SA 151-->
   </body>
 </html>
