--- a/locative-media/index.html
+++ b/locative-media/index.html
@@ -6,8 +6,7 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<h1>Wander around outside of Sage to experience this piece</h1>
-		<a href="" id="mapLink" target="_blank">Your Location</a>
+		<h1>Wander around Jackson Court and the hill area to experience this piece.</h1>
 
 		<script type="text/javascript" src="https://npmcdn.com/@turf/turf/turf.min.js"></script>
 		<script type="text/javascript" src="geoJson.js"></script>
