--- a/locative-media/index.html
+++ b/locative-media/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>Wander around Jackson Court and the hill area to experience this piece.</h1>
-
+		<a href="" target="_blank" id="mapLink">My Location</a>
 		<script type="text/javascript" src="https://npmcdn.com/@turf/turf/turf.min.js"></script>
 		<script type="text/javascript" src="geoJson.js"></script>
 		<script type="text/javascript" src="index.js"></script>
