--- a/locative-media/index.html
+++ b/locative-media/index.html
@@ -6,8 +6,8 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<h1>Wander around Jackson Court and the hill area to experience this piece.</h1>
-		<a href="" target="_blank" id="mapLink">My Location</a>
+		<h1>Wander around outside of Sage to experience this piece</h1>
+
 		<script type="text/javascript" src="https://npmcdn.com/@turf/turf/turf.min.js"></script>
 		<script type="text/javascript" src="geoJson.js"></script>
 		<script type="text/javascript" src="index.js"></script>
