--- a/locative-media/index.html
+++ b/locative-media/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<h1>Wander around outside of Sage to experience this piece</h1>
+		<h1 id="header">Wander around outside of Sage to experience this piece</h1>
 
 		<script type="text/javascript" src="https://npmcdn.com/@turf/turf/turf.min.js"></script>
 		<script type="text/javascript" src="geoJson.js"></script>
