--- a/locative-media/index.html
+++ b/locative-media/index.html
@@ -19,6 +19,7 @@
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
 		<script type="text/javascript" src="https://npmcdn.com/@turf/turf/turf.min.js"></script>
 		<script type="text/javascript" src="geoJson.js"></script>
+		<script type="text/javascript" src="locationAudioMaps.js"></script>
 		<script type="text/javascript" src="index.js"></script>
 	</body>
 </html>
