added looping audio

--- a/locative-media/index.html
+++ b/locative-media/index.html
@@ -11,7 +11,7 @@
 		<div id="overlay" class="off">
 			<h1 id="header">Explore River Campus during the day and night to experience this piece.</h1>
 			<p id="description">Location permissions are required to use this site. Hitting play will only work after permission has been granted and location has been found.</p>
-			<a id="toggle" onclick="togglePlayable()">▶</a>
+			<a id="toggle" onclick="togglePlayable()" href="#">▶</a>
 		</div>
 		<div id="mapid"></div>
 
