--- a/scratch/zen-copy-url-demo.html
+++ b/scratch/zen-copy-url-demo.html
@@ -4,12 +4,33 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>new link](https://zen-browser.app/) [original one</title>
+	<style type="text/css">
+		html {
+			width: 100vw;
+			height: 100vh;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+		body {
+			font-family: Georgia, serif;
+			width: min(40ch, 90%);
+			margin-bottom: 5em;
+			border-radius: 16px;
+			background-color: #f2f0e3;
+			color: #202020;
+		}
+		a, code {
+			color: #f76f53;
+		}
+	</style>
 </head>
 <body>
 	<h1>Copy the URL as markdown to see the issue</h1>
 	<p>For context this is related to <a href="https://zen-browser.app/">Zen Browser</a> <a href="https://github.com/zen-browser/desktop/pull/4801">adding a feature</a> for copying the current URL as a markdown link with <code>Ctrl+Alt+Shift+C</code>.</p>
 	<script type="text/javascript">
 		// Sorryyyyy ;)
+		// This is actually just to show that the issue can be abused, instead of "original one" for the second link you could just have whitespace
 		document.addEventListener('keydown', (e)=>{
 			if(e.ctrlKey && e.shiftKey && e.altKey) {
 				document.title = "original link](https://www.youtube.com/watch?v=dQw4w9WgXcQ) [new one";
