Being pedantic about styles in zen url demo

--- a/scratch/zen-copy-url-demo.html
+++ b/scratch/zen-copy-url-demo.html
@@ -11,14 +11,15 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-		}
-		body {
+			
 			font-family: Georgia, serif;
-			width: min(40ch, 90%);
-			margin-bottom: 5em;
-			border-radius: 16px;
 			background-color: #f2f0e3;
 			color: #202020;
+		}
+		body {
+			width: min(40ch, 90%);
+			margin-bottom: min(5em, 10%);
+			
 		}
 		a, code {
 			color: #f76f53;
