Update zen-copy-url-demo.html pedantically since css vw doesn't include scroll bars

--- a/scratch/zen-copy-url-demo.html
+++ b/scratch/zen-copy-url-demo.html
@@ -6,7 +6,7 @@
 	<title>this feature can lead to undesired behavior when dealing with weird titles](https://zen-browser.app/) [here's the original link</title>
 	<style type="text/css">
 		html {
-			width: 100vw;
+			width: 100%;
 			min-height: 100vh;
 			display: flex;
 			align-items: center;
@@ -17,8 +17,8 @@
 			color: #202020;
 		}
 		body {
-			width: min(40ch, 90%);
-			margin-bottom: min(5em, 10%);
+			max-width: 40ch;
+			margin-bottom: min(3em, 5%);
 			
 		}
 		a, code {
